Fixing up the nav bar on mobile + shrinking the cards

--- a/src/styles/CardStyles.module.css
+++ b/src/styles/CardStyles.module.css
@@ -116,6 +116,14 @@
   .line_divider {
     margin-inline: auto;
     height: 2px;
-    margin-top: 3rem;
+    margin-top: 2rem;
+  }
+
+  .card_container {
+    width: 85%;
+  }
+
+  .info_title {
+    margin-top: 2rem;
   }
 }
