--- a/src/styles/NavStyles.module.css
+++ b/src/styles/NavStyles.module.css
@@ -71,6 +71,8 @@
   left: 1rem;
   display: flex;
   align-items: center;
+  /* Don't want pop-in when weather loads */
+  min-width: 6.5rem;
 }
 
 .inner_nav_bubble {
@@ -141,12 +143,9 @@
 
 @media (max-width: 500px) {
   .nav {
-    width: 97%;
-  }
-
-  .link_container {
-    display: none;
-    order: 3;
+    width: 94%;
+    padding-inline: 1rem;
+    justify-content: space-between;
   }
 
   .weather {
@@ -155,23 +154,21 @@
 
   .city_picker {
     position: initial;
-    margin-right: auto;
-    margin-left: 3rem;
   }
 
-  .nav {
-    width: 100%;
+  .city_button {
+    font-size: 1.8rem;
   }
 
-  .hamburger_menu {
-    display: flex;
-    justify-content: flex-end;
+  .link_container {
+    display: none;
+    order: 3;
   }
 
   .hamburger_label {
     cursor: pointer;
     display: inline-block;
-    padding: 10px;
+    padding: .9rem .9rem;
     position: relative;
   }
 
@@ -181,7 +178,7 @@
     height: 2px;
     position: relative;
     transition: background-color 0.3s ease;
-    width: 20px;
+    width: 15px;
   }
 
   .hamburger_lines:before,
@@ -245,12 +242,7 @@
   }
 
   .inner_nav_bubble {
-    position: absolute;
-    right: 2rem;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    transform: translateY(-50%);
-    top: 50%;
+    order: 3;
+    margin-right: 1rem;
   }
 }
